/**
 * Copyright Â© 2016-2020 The Thingsboard Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
package queue;

option java_package = "org.thingsboard.mqtt.broker.gen.queue";
option java_outer_classname = "QueueProtos";

message SessionInfoProto {
  int64 sessionIdMSB = 1;
  int64 sessionIdLSB = 2;
  int64 tenantIdMSB = 3;
  int64 tenantIdLSB = 4;
  string clientId = 5;
  bool persistent = 6;
}

message PublishMsgProto {
  SessionInfoProto sessionInfo = 1;
  bytes payload = 2;
  bool duplicate = 3;
  bool retain = 4;
  int32 qos = 5;
  string topicName = 6;
  int32 packetId = 7;
}

message TopicSubscriptionProto {
  string topic = 1;
  int32  qos = 2;
}

message ClientSessionProto {
  bool persistent = 1;
  repeated TopicSubscriptionProto subscriptions = 2;
}
